# xdrlib2

./: .bandit  .buildinfo  .gitignore  .travis.yml  LICENSE  README.md  README.rst  appveyor.yml  genindex.html  index.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  development-test.yml  gh-pages.yml  learn-github-actions.yml
_sources/: index.rst.txt
docs/: Makefile  conf.py  index.html  index.rst  intro.rst  make.bat  xdrlib2.rst
docs/source/: conf.py
etc/: example.xdr  fs.ini  grammar.ebnf  stress.xdr  xdr.ini
etc/grammar/: grammar.ebnf
oldsrc/: test_basic_types.py  test_compound_types.py  xdr_parser.py  xdr_types.py
parser/: out  stres.ast
scripts/: generate_parser.py
source/: index.rst
src/xdrlib2/: __init__.py  xdr_core.py  xdr_enumeration.py  xdr_float.py  xdr_integer.py  xdr_legacy.py  xdr_optional.py  xdr_sequence.py  xdr_struct.py  xdr_types.py  xdr_union.py  xdr_void.py
tests/: __init__.py  test_array.py  test_arrays.py  test_base.py  test_basic_types.py  test_basics.py  test_byte_sequences.py  test_compound_types.py  test_enumerations.py  test_float_types.py  test_floats.py  test_general.py  test_integer_types.py  test_integers.py  test_opaque.py  test_optional_types.py  test_parser.py  test_struct.py  test_structs.py  test_typedef.py  test_union.py  test_use.py  test_void.py  test_xdrlib_replacement.py
tests/core/: __init__.py  test_integer.py
tests/test_encoding_decoding/: test_float_types.py  test_integer_types.py  test_optional_types.py
tests/test_xdr_types/: test_atomic_types.py  test_doctests.py  test_opaque_and_string.py  test_optional_types.py  test_void.py
xdrlib2/: __init__.py  parser.py  semantics.py  xdr_base.py  xdr_parser.py  xdr_tools.py  xdr_types.py
xdrlib2/core/: integer.py
