[tool.poetry]
name = "xdrlib2"
version = "v0.0.0"
description = "A replacement for the xdrlib package in Python's standard library"
authors = ["Ruud de Jong <rhjdjong@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.5"}
black = {extras = ["d"], version = "^23.7.0"}
isort = "^5.12.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pyupgrade = "^3.9.0"
refurb = "^1.17.0"
ruff = "^0.0.281"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
sphinx = "^7.1.1"
myst-parser = "^2.0.0"
sphinx-mdinclude = "^0.5.3"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
