[metadata]
name = xdrlib2
version = attr: xdrlilb2._version
description = a drop-in replacement for Pythons stdlib xdrlib package
long_description = file: README.rst
long_description_content_type = type/x-rst; charset=UTF-8
url = https://github.com/rhjdjong/xdrlib2
author = Ruud de Jong
license = MIT
license_files = LICENSE
classifiers =
    'Development Status :: 3 - Alpha'
    'Intended Audience :: Developers'
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python :: 3.10'
project_urls =
    Documentation = https://xdrlib2.readthedocs.io
    Source = https://github.com/rhjdjong/xdrlib2
    Tracker = https://github.com/rhjdjong/xdrlib2/issues
keywords = xdr, binary data, exchange, RFC1014, RFC1832, RFC4506

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[options.extras_require]
test =
    pytest
doc =
    docutils
    sphinx
    sphinx_rtd_theme
dev =
    %(doc)s
    %(test)s
